devops/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gocart
  labels:
    name: gocart
    environment: production
