devops/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gocart-service
  namespace: gocart
  labels:
    app: gocart-web
spec:
  type: ClusterIP
  selector:
    app: gocart-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
