devops/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gocart-ingress
  namespace: gocart
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Set to true when certificate manager (cert-manager) is configured
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gocart-service
                port:
                  number: 80
